0.6.0 (currently working on)
- [#1623] Feature: Add a field "skills" to the speaker record
- [#1619] Fix: Time-slots are not sorted in front-end
- [#1348] Feature: Make hideSearchForm working with the Selector Widget
- [#1599] Feature: Add a function getMarker()
- [#1596] Fix: Confirmation mail: Lodging options not shown
- [#1592] Change: Skip some queries when we know that the result will be empty beforehand
- [#1588] Fix: SQL warning in the EM about the language and country
- [#1587] Change: Inline pi1::createSeminarBagForSelectorWidget
- [#1405] Feature: Display the categories in the list view and single view
- [#1568] Feature: Add a public function isSubpartVisible
- [#1579] Feature: Allow to set hideCanceled for seminar bag builders
- [#1576] Feature: Allow to set page recursion for bag builders
- [#1584] Fix: Missing colon in the flexforms in the default language
- [#1574] Feature: Bag builders should provide their WHERE clauses to the public world
- [#1575] Feature: Allow to limit the seminar bag builder to a category
- [#1566] Feature: Allow to specify an event UID for categorybags
- [#1565] Change: The categorybagbuilder should create a bag that is sorted by title
- [#1556] Change: Add a new content wizard icon
- [#1466] Feature: Include the registration UID in the notification and thank-you e-mails and in the CSV export
- [#1563] Change: The default sorting for bags should be by UID
- [#1562] Feature: Display the UID as "Ticket ID" when editing a registration in the list view
- [#1567] Fix: HTML template in the registration process
- [#1513] Fix: Automatic setting of the timeslot titles doesn't work anymore
- [#1541] Change: Remove the return; for functions that do not return anything
- [#1519] Change: Change the ordering of seminars in the list view, patch by Stefan Galinski
- [#1169] Feature: Add a field "organizing partner" to the event's record
- [#1518] Change: Moved field "language" from topic to date records